POWR-1042-1 Test Group featured content list idea

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0",
+        "drupal/ief_table_view_mode": "^2.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
         "drupal/link_class": "^1.3",
