--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_content_list
     - field.field.group.bureau_office.field_featured_groups
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
@@ -293,5 +294,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
 hidden:
+  field_featured_content_list: true
   path: true
   uid: true
