--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_end_date
     - field.field.group.project.field_featured_content
+    - field.field.group.project.field_featured_content_list
     - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
@@ -29,6 +30,7 @@ dependencies:
     - chosen_field
     - entity_browser
     - field_group
+    - ief_table_view_mode
     - maxlength
     - path
 third_party_settings:
@@ -163,6 +165,22 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_featured_content_list:
+    type: inline_entity_form_complex_table_view_mode
+    weight: 18
+    region: content
+    settings:
+      form_mode: default
+      label_singular: ''
+      label_plural: ''
+      override_labels: false
+      collapsible: false
+      collapsed: false
+      allow_new: true
+      allow_existing: false
+      match_operator: CONTAINS
+      allow_duplicate: false
+    third_party_settings: {  }
   field_featured_groups:
     weight: 13
     settings:
