--- a/web/sites/default/config/core.entity_view_display.group.project.group_feature_list.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.group_feature_list.yml
@@ -1,8 +1,9 @@
-uuid: efa912d6-45f6-4262-999d-a4e949371bf1
+uuid: a0548c4a-10ea-4123-a847-5f78660576a9
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.group_feature_list
     - field.field.group.project.field_audience
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
@@ -28,6 +29,7 @@ dependencies:
     - datetime
     - ds
     - field_group
+    - portland
 third_party_settings:
   ds:
     layout:
@@ -38,12 +40,10 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_content_list
         - field_featured_media
-        - group_start_to_end_date
-        - field_summary
-        - group_site_menu_entity_view_1
         - field_featured_content
-        - field_featured_groups
+        - group_start_to_end_date
         - field_start_date
         - field_end_date
   field_group:
@@ -52,7 +52,7 @@ third_party_settings:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 1
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
@@ -65,10 +65,10 @@ third_party_settings:
         speed: fast
       label: 'Start to end date'
       region: content
-id: group.project.default
+id: group.project.group_feature_list
 targetEntityType: group
 bundle: project
-mode: default
+mode: group_feature_list
 content:
   field_end_date:
     type: datetime_default
@@ -108,7 +108,7 @@ content:
             fi: false
             fi-def-at: false
   field_featured_content:
-    weight: 4
+    weight: 2
     label: above
     settings:
       view_mode: featured
@@ -124,25 +124,15 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_featured_groups:
-    weight: 6
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: 'Programs and projects'
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_media:
+  field_featured_content_list:
+    type: portland_plural_label
     weight: 0
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_featured_media:
+    weight: 1
     label: hidden
     settings:
       view_mode: banner
@@ -194,47 +184,6 @@ content:
             fi-def-at: false
     type: datetime_default
     region: content
-  field_summary:
-    weight: 2
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-    type: string
-    region: content
-  group_site_menu_entity_view_1:
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -244,13 +193,15 @@ hidden:
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
   field_enable_projects_menu_item: true
-  field_featured_content_list: true
+  field_featured_groups: true
   field_legacy_path: true
   field_parent_group: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  field_summary: true
   field_topics: true
+  group_site_menu_entity_view_1: true
   label: true
   uid: true
