--- a/web/sites/default/config/field.storage.node.field_featured_content.yml
+++ b/web/sites/default/config/field.storage.node.field_featured_content.yml
@@ -1,4 +1,4 @@
-uuid: d4056fb5-9df8-4b6a-942c-e1fd35b4cfcd
+uuid: 3ab932b7-30ae-4b87-bfc3-0405fe24b155
 langcode: en
 status: true
 dependencies:
@@ -8,11 +8,12 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_feature_this_content
-field_name: field_feature_this_content
+id: node.field_featured_content
+field_name: field_featured_content
 entity_type: node
-type: boolean
-settings: {  }
+type: entity_reference
+settings:
+  target_type: node
 module: core
 locked: false
 cardinality: 1
