--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -200,3 +200,4 @@ search_api_autocomplete: 1.2.0
 typed_data: 1.0.0-alpha3
 rules: 3.0.0-alpha4
 mimemail: 1.0.0-alpha2
+ief_table_view_mode: 2.0.0
