--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_content_list
     - field.field.group.bureau_office.field_featured_groups
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
@@ -68,6 +69,14 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
+    region: content
+  field_featured_content_list:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_featured_groups:
     weight: 5
