--- a/web/sites/default/config/field.field.node.featured_content_with_expiration.field_feature_until.yml
+++ b/web/sites/default/config/field.field.node.featured_content_with_expiration.field_feature_until.yml
@@ -1,10 +1,10 @@
-uuid: 1f6fe02c-b8d2-415e-b5f7-b7fc50d95c99
+uuid: ce57563d-fe34-4e56-8118-164d2b50456f
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_feature_until
-    - node.type.news
+    - node.type.featured_content_with_expiration
   module:
     - custom_add_another
     - datetime
@@ -12,18 +12,18 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.news.field_feature_until
+id: node.featured_content_with_expiration.field_feature_until
 field_name: field_feature_until
 entity_type: node
-bundle: news
+bundle: featured_content_with_expiration
 label: 'Feature until'
-description: 'You must select feature this content for this date to be used.'
+description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     default_date_type: relative
-    default_date: 'now +30 days'
+    default_date: '+7 days'
     field_defaults:
       update_defaults: 0
       no_overwrite: 0
