POWR-784 configure group groups lists

--- a/web/sites/default/config/core.entity_form_display.group.group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.group.default.yml
@@ -11,11 +11,13 @@ dependencies:
     - field.field.group.group.field_legacy_path
     - field.field.group.group.field_menu_link
     - field.field.group.group.field_official_organization_name
+    - field.field.group.group.field_parent_group
     - field.field.group.group.field_phone
     - field.field.group.group.field_shortname_or_acronym
     - field.field.group.group.field_summary
     - group.type.group
   module:
+    - chosen_field
     - entity_browser
     - maxlength
     - menu_link
@@ -27,7 +29,7 @@ bundle: group
 mode: default
 content:
   field_featured_content:
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -36,7 +38,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,7 +48,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 4
+    weight: 5
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -66,7 +68,7 @@ content:
     type: options_select
     region: content
   field_legacy_path:
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -74,7 +76,7 @@ content:
     type: string_textfield
     region: content
   field_menu_link:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -87,8 +89,14 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_parent_group:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_phone:
-    weight: 7
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -103,7 +111,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 5
+    weight: 6
     settings:
       rows: 3
       placeholder: ''
@@ -125,7 +133,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
