--- a/web/sites/default/config/field.field.group.group.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.group.field_parent_group.yml
@@ -1,4 +1,4 @@
-uuid: 2160fbd7-f3b6-4a75-b99b-18e5ea9db474
+uuid: 0c4a8c67-62aa-4628-a49f-e356ea6a3b8f
 langcode: en
 status: true
 dependencies:
@@ -8,19 +8,18 @@ dependencies:
     - group.type.elected_official
     - group.type.group
     - group.type.program
-    - group.type.project
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: group.project.field_parent_group
+id: group.group.field_parent_group
 field_name: field_parent_group
 entity_type: group
-bundle: project
+bundle: group
 label: 'Parent bureau, office, or program'
-description: 'Each program has one primary parent group used for navigation and listing programs that belong within that parent group. Programs without a single parent, should not use this field.'
+description: ''
 required: false
 translatable: true
 default_value: {  }
@@ -33,10 +32,8 @@ settings:
       elected_official: elected_official
       group: group
       program: program
-      project: project
     sort:
-      field: label
-      direction: ASC
+      field: _none
     auto_create: false
     auto_create_bundle: bureau_office
 field_type: entity_reference
