--- a/web/sites/default/config/views.view.group_programs.yml
+++ b/web/sites/default/config/views.view.group_programs.yml
@@ -4,9 +4,14 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_summary
+    - group.type.group
     - group.type.program
+    - taxonomy.vocabulary.group_type
+  content:
+    - 'taxonomy_term:group_type:cf3f697a-663a-40c2-b380-326c8621e8c8'
   module:
     - group
+    - taxonomy
 id: group_programs
 label: 'Group: Programs'
 module: views
@@ -205,6 +210,7 @@ display:
           admin_label: ''
           operator: in
           value:
+            group: group
             program: program
           group: 1
           exposed: false
@@ -237,6 +243,50 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
+        field_group_type_target_id:
+          id: field_group_type_target_id
+          table: group__field_group_type
+          field: field_group_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            59: 59
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: true
+          type: select
+          limit: true
+          vid: group_type
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       sorts:
         label:
           id: label
@@ -309,6 +359,11 @@ display:
       use_more_text: 'View all programs'
       link_url: ''
       link_display: page_1
+      filter_groups:
+        operator: OR
+        groups:
+          1: AND
+          2: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -316,6 +371,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
@@ -404,6 +460,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
       tags: {  }
   page_1:
     display_plugin: page
@@ -437,6 +494,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
