--- a/web/sites/default/config/pathauto.pattern.groups.yml
+++ b/web/sites/default/config/pathauto.pattern.groups.yml
@@ -1,24 +1,27 @@
-uuid: 8f1c2246-fa8a-4c0d-b251-a0f721c7af67
+uuid: 727afc93-ed07-42bc-98d8-98699056c4b3
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - group
-id: group_projects_and_programs
-label: 'Group: projects and programs'
+id: groups
+label: Groups
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  976cd083-685d-4cf5-8037-6569046f24b4:
+  16a4b033-02cd-4be1-b3cc-77bcdcf18875:
     id: 'entity_bundle:group'
     bundles:
+      bureau_office: bureau_office
+      elected_official: elected_official
+      group: group
       program: program
       project: project
     negate: false
     context_mapping:
       group: group
-    uuid: 976cd083-685d-4cf5-8037-6569046f24b4
+    uuid: 16a4b033-02cd-4be1-b3cc-77bcdcf18875
 selection_logic: and
 weight: -5
 relationships: {  }
