POWR-784 correct search api views and displays

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -30,13 +30,19 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
-  module:
-    - ds
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
 mode: teaser
 content:
+  field_official_organization_name:
+    type: string
+    weight: 0
+    region: content
+    label: visually_hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   field_summary:
     type: string
     weight: 1
@@ -45,42 +51,6 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  label:
-    label: hidden
-    type: string
-    weight: 0
-    region: content
-    settings:
-      link_to_entity: true
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: h2
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 hidden:
   changed: true
   created: true
@@ -102,11 +72,11 @@ hidden:
   field_legacy_path: true
   field_logo: true
   field_menu_link: true
-  field_official_organization_name: true
   field_parent_group: true
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
+  label: true
   uid: true
