--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -28,24 +28,11 @@ targetEntityType: group
 bundle: elected_official
 mode: teaser
 content:
-  field_summary:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  group_site_menu_entity_view_1:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  label:
-    label: hidden
+  field_official_title:
     type: string
     weight: 0
     region: content
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -65,10 +52,10 @@ hidden:
   field_featured_groups: true
   field_legacy_path: true
   field_menu_link: true
-  field_official_title: true
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  field_summary: true
   group_site_menu_entity_view_1: true
   label: true
   uid: true
