--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -5,28 +5,29 @@ dependencies:
   module:
     - search_api_solr
     - taxonomy
-    - node
     - group
+    - node
     - search_api
     - portland
   config:
-    - field.storage.node.field_community_actions
-    - field.storage.node.field_audience
-    - field.storage.node.field_end_date
-    - field.storage.node.field_end_time
+    - field.storage.group.field_audience
+    - field.storage.group.field_group_type
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
+    - field.storage.group.field_search_keywords
+    - field.storage.group.field_shortname_or_acronym
+    - field.storage.group.field_summary
+    - field.storage.group.field_topics
+    - field.storage.node.field_audience
+    - field.storage.node.field_community_actions
+    - field.storage.node.field_end_date
+    - field.storage.node.field_end_time
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
-    - field.storage.group.field_summary
     - field.storage.node.field_summary
-    - field.storage.group.field_audience
-    - field.storage.group.field_search_keywords
-    - field.storage.group.field_topics
     - field.storage.node.field_topics
     - search_api.server.searchstax
 third_party_settings:
@@ -152,6 +153,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_end_time
+  field_group_type:
+    label: 'Group type term'
+    datasource_id: 'entity:group'
+    property_path: field_group_type
+    type: string
+    dependencies:
+      config:
+        - field.storage.group.field_group_type
   field_official_organization_name:
     label: 'Official organization name'
     datasource_id: 'entity:group'
@@ -353,14 +362,6 @@ field_settings:
     dependencies:
       module:
         - group
-  type_1:
-    label: 'Group type_1'
-    datasource_id: 'entity:group'
-    property_path: type
-    type: string
-    dependencies:
-      module:
-        - group
   type_2:
     label: 'Content type'
     datasource_id: 'entity:node'
@@ -409,6 +410,7 @@ processor_settings:
       - action_name
       - audience_name
       - content_title
+      - field_group_type
       - field_official_organization_name
       - field_official_title
       - field_search_keywords
@@ -426,7 +428,6 @@ processor_settings:
       - term_name_2
       - topic_name
       - type
-      - type_1
       - type_2
     title: true
     alt: true
