--- a/web/sites/default/config/views.view.bureaus_and_offices_index.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices_index.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - search_api.index.full_index
     - system.menu.main
+    - taxonomy.vocabulary.group_type
+  content:
+    - 'taxonomy_term:group_type:c7237379-70a2-44a9-9500-d669b373b39b'
   module:
     - search_api
 id: bureaus_and_offices_index
@@ -78,13 +81,19 @@ display:
             'entity:group':
               bureau_office: teaser
               elected_official: teaser
+              group: teaser
               program: teaser
               project: teaser
             'entity:node':
+              charter_article: default
+              charter_chapter: default
+              charter_section: default
               city_service: default
+              code_chapter: default
+              code_section: default
+              code_title: default
+              development_permit: default
               event: default
-              guide: default
-              information: default
               news: default
               page: default
             'entity:taxonomy_term':
@@ -277,30 +286,62 @@ display:
             - rendered_item
             - title
           plugin_id: search_api_fulltext
-      sorts:
-        search_api_relevance:
-          id: search_api_relevance
+        field_group_type:
+          id: field_group_type
           table: search_api_index_full_index
-          field: search_api_relevance
+          field: field_group_type
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          operator: or
+          value:
+            58: 58
+          group: 1
           exposed: false
           expose:
+            operator_id: ''
             label: ''
-          plugin_id: search_api
-        label:
-          id: label
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: true
+          type: select
+          limit: true
+          vid: group_type
+          hierarchy: false
+          error_message: true
+          plugin_id: search_api_term
+      sorts:
+        group_title:
+          id: group_title
           table: search_api_index_full_index
-          field: label
+          field: group_title
           relationship: none
           group_type: group
           admin_label: ''
           order: ASC
           exposed: false
           expose:
-            label: Title
+            label: ''
           plugin_id: search_api
       title: 'Bureaus and offices'
       header:
@@ -330,6 +371,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       tags: {  }
   page_1:
     display_plugin: page
@@ -358,4 +400,5 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       tags: {  }
