--- a/web/sites/default/config/core.entity_form_display.group.group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.group.default.yml
@@ -21,7 +21,6 @@ dependencies:
     - entity_browser
     - maxlength
     - menu_link
-    - path
     - telephone
 id: group.group.default
 targetEntityType: group
@@ -29,7 +28,7 @@ bundle: group
 mode: default
 content:
   field_featured_content:
-    weight: 9
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -38,7 +37,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 10
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -68,7 +67,7 @@ content:
     type: options_select
     region: content
   field_legacy_path:
-    weight: 12
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -76,7 +75,7 @@ content:
     type: string_textfield
     region: content
   field_menu_link:
-    weight: 11
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -96,7 +95,7 @@ content:
     type: chosen_select
     region: content
   field_phone:
-    weight: 8
+    weight: 7
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -131,11 +130,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 7
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  path: true
   uid: true
