--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -37,16 +37,43 @@ third_party_settings:
         - field_official_title
         - field_summary
         - group_site_menu_entity_view_1
+        - field_featured_content
+        - field_featured_groups
+        - field_bureaus
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
+  field_bureaus:
+    type: entity_reference_label
+    weight: 5
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_featured_content:
+    type: entity_reference_label
+    weight: 3
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_featured_groups:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
   field_official_title:
     type: string
     weight: 0
     region: content
-    label: hidden
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings:
@@ -79,7 +106,9 @@ content:
             fis-def-at: false
             fi-def-at: false
   field_summary:
+    type: string
     weight: 1
+    region: content
     label: hidden
     settings:
       link_to_entity: false
@@ -112,8 +141,6 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-    type: string
-    region: content
   group_site_menu_entity_view_1:
     weight: 2
     region: content
@@ -124,15 +151,12 @@ hidden:
   created: true
   field_address: true
   field_building: true
-  field_bureaus: true
   field_email: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
   field_enable_offices_and_program: true
   field_enable_projects_menu_item: true
-  field_featured_content: true
-  field_featured_groups: true
   field_legacy_path: true
   field_menu_link: true
   field_phone: true
