--- a/web/sites/default/config/group.role.group-anonymous.yml
+++ b/web/sites/default/config/group.role.group-anonymous.yml
@@ -11,4 +11,15 @@ internal: true
 audience: anonymous
 group_type: group
 permissions_ui: true
-permissions: {  }
+permissions:
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:development_permit entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
+  - 'view group_node:city_service entity'
