--- a/web/sites/default/config/core.entity_view_display.group.group.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.group.contact_information.yml
@@ -1,4 +1,4 @@
-uuid: aa39c322-9ef5-4566-9500-0e4564428859
+uuid: 2c9dade1-00c4-4fa8-92d9-830487bc0700
 langcode: en
 status: true
 dependencies:
@@ -11,112 +11,46 @@ dependencies:
     - field.field.group.group.field_legacy_path
     - field.field.group.group.field_menu_link
     - field.field.group.group.field_official_organization_name
+    - field.field.group.group.field_parent_group
     - field.field.group.group.field_phone
     - field.field.group.group.field_shortname_or_acronym
     - field.field.group.group.field_summary
     - group.type.group
   module:
-    - menu_link
     - telephone
 id: group.group.contact_information
 targetEntityType: group
 bundle: group
 mode: contact_information
 content:
-  field_featured_content:
-    weight: 17
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_featured_groups:
-    weight: 18
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_featured_media:
-    weight: 13
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_group_type:
-    weight: 15
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_legacy_path:
-    weight: 20
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_menu_link:
-    weight: 19
-    label: above
-    settings:
-      link_to_target: true
-    third_party_settings: {  }
-    type: menu_link
-    region: content
   field_official_organization_name:
-    weight: 12
-    label: above
+    type: string
+    weight: 0
+    region: content
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   field_phone:
-    weight: 16
-    label: above
+    type: telephone_link
+    weight: 1
+    region: content
+    label: visually_hidden
     settings:
       title: ''
-    third_party_settings: {  }
-    type: telephone_link
-    region: content
-  field_shortname_or_acronym:
-    weight: 11
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_summary:
-    weight: 14
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  group_site_menu_entity_view_1:
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  label:
-    label: hidden
-    type: string
-    weight: -5
-    region: content
-    settings:
-      link_to_entity: false
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
+  field_featured_content: true
+  field_featured_groups: true
+  field_featured_media: true
+  field_group_type: true
+  field_legacy_path: true
+  field_menu_link: true
+  field_parent_group: true
+  field_shortname_or_acronym: true
+  field_summary: true
+  group_site_menu_entity_view_1: true
+  label: true
   uid: true
