--- a/web/sites/default/config/core.entity_view_display.group.group.related.yml
+++ b/web/sites/default/config/core.entity_view_display.group.group.related.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.group.group.field_legacy_path
     - field.field.group.group.field_menu_link
     - field.field.group.group.field_official_organization_name
+    - field.field.group.group.field_parent_group
     - field.field.group.group.field_phone
     - field.field.group.group.field_shortname_or_acronym
     - field.field.group.group.field_summary
@@ -105,6 +106,7 @@ hidden:
   field_legacy_path: true
   field_menu_link: true
   field_official_organization_name: true
+  field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
   field_summary: true
