POWR-1069 Give Greg Raisman control

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -130,19 +130,23 @@ access:
     permissions: {  }
   view_any:
     roles: {  }
-    users: {  }
+    users:
+      - 571
     permissions: {  }
   update_any:
     roles: {  }
-    users: {  }
+    users:
+      - 571
     permissions: {  }
   delete_any:
     roles: {  }
-    users: {  }
+    users:
+      - 571
     permissions: {  }
   purge_any:
     roles: {  }
-    users: {  }
+    users:
+      - 571
     permissions: {  }
   view_own:
     roles: {  }
