POWR-1069 Add link to the submission for admins

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -228,7 +228,7 @@ handlers:
       from_options: {  }
       from_name: _default
       subject: 'New vendor registration for Last Thursdays on Alberta: [webform_submission:values:vendor_name]'
-      body: "<p>Submitted on {{ webform_token('[webform_submission:created]', webform_submission) }}</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n"
+      body: "<p>Submitted on {{ webform_token('[webform_submission:created]', webform_submission) }}</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n<p>You can update, including approve, the submission here: [webform_submission:update-url]</p>\r\n"
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
