POWR-1042 Views for featured news

--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -11,6 +11,11 @@ portland.group_media:
   base_route: 'entity.group.canonical'
   route_name: 'view.group_media.page_1'
   weight: 150
+portland.featured_content:
+  title: 'Featured Content'
+  base_route: 'entity.group.canonical'
+  route_name: 'portland.group_featured_content.edit'
+  weight: 155
 portland.add_content:
   title: '+ Add Content'
   base_route: 'entity.group.canonical'
