--- a/web/sites/default/config/core.entity_view_display.node.featured_content_with_expiration.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.featured_content_with_expiration.teaser.yml
@@ -17,4 +17,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_feature_until: true
+  field_featured_content: true
