--- a/web/sites/default/config/views.view.group_featured_news_and_events.yml
+++ b/web/sites/default/config/views.view.group_featured_news_and_events.yml
@@ -1,18 +1,21 @@
-uuid: c17f8299-dc9c-41fe-a094-7072281e9a55
+uuid: a08bf157-d205-4b67-a7a8-4938b232957e
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.group.field_featured_content_list
+    - field.storage.node.field_featured_content
+    - node.type.featured_content_with_expiration
   module:
     - group
+    - node
+    - user
 id: group_featured_news_and_events
-label: 'Group featured news and events'
+label: 'Group: Featured news and events'
 module: views
 description: ''
 tag: ''
-base_table: groups_field_data
-base_field: id
+base_table: node_field_data
+base_field: nid
 core: 8.x
 display:
   default:
@@ -22,8 +25,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
@@ -52,17 +56,13 @@ display:
           offset: 0
       style:
         type: default
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
       row:
         type: fields
       fields:
-        field_featured_content_list:
-          id: field_featured_content_list
-          table: group__field_featured_content_list
-          field: field_featured_content_list
+        field_featured_content:
+          id: field_featured_content
+          table: node__field_featured_content
+          field: field_featured_content
           relationship: none
           group_type: group
           admin_label: ''
@@ -122,19 +122,64 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-      filters: {  }
-      sorts: {  }
-      title: 'Group featured news'
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            featured_content_with_expiration: featured_content_with_expiration
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          order: DESC
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+      title: 'Group: Featured news and events'
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        reverse__group__field_featured_content_list:
+          id: reverse__group__field_featured_content_list
+          table: node_field_data
+          field: reverse__group__field_featured_content_list
+          relationship: none
+          group_type: group
+          admin_label: field_featured_content_list
+          required: true
+          entity_type: node
+          plugin_id: entity_reverse
       arguments:
         id:
           id: id
           table: groups_field_data
           field: id
-          relationship: none
+          relationship: reverse__group__field_featured_content_list
           group_type: group
           admin_label: ''
           default_action: default
@@ -167,9 +212,6 @@ display:
           entity_field: id
           plugin_id: group_id
       display_extenders: {  }
-      filter_groups:
-        operator: AND
-        groups: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -177,8 +219,10 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - 'user.node_grants:view'
+        - user.permissions
       tags:
-        - 'config:field.storage.group.field_featured_content_list'
+        - 'config:field.storage.node.field_featured_content'
         - extensions
   block_1:
     display_plugin: block
@@ -187,7 +231,8 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      block_description: 'Group featured news'
+      block_description: 'Group: Featured news and events'
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -195,6 +240,8 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - 'user.node_grants:view'
+        - user.permissions
       tags:
-        - 'config:field.storage.group.field_featured_content_list'
+        - 'config:field.storage.node.field_featured_content'
         - extensions
