POWR-893 updated verbiage for published on/off indicator

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -265,8 +265,8 @@ display:
           type: boolean
           settings:
             format: custom
-            format_custom_true: '<span class="status-published" title="This page is live"><i class="fa fa-circle" aria-hidden="true"></i></span>'
-            format_custom_false: '<span class="status-unpublished" title="This page is not live"><i class="fa fa-circle" aria-hidden="true"></i></span>'
+            format_custom_true: '<span class="status-published" title="Has published revision"><i class="fa fa-circle" aria-hidden="true"></i></span>'
+            format_custom_false: '<span class="status-unpublished" title="No published revision"><i class="fa fa-circle" aria-hidden="true"></i></span>'
           group_column: value
           group_columns: {  }
           group_rows: true
