POWR-1034 update permissions and fix errant package-lock.json that keeps getting rewritten

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -77,6 +77,8 @@ permissions:
   - 'view own field_popular'
   - 'view own field_shortname_or_acronym'
   - 'view own unpublished content'
+  - 'view page revisions'
   - 'view search api pages'
+  - 'view service_location revisions'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
