POWR-983-2 Refactor display suite card templates

--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -1,35 +1,24 @@
-cloudy_card--small:
-  label: Card small
-  category: Cloudy
-  template: templates/ds/layout--ds-card--small
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Content
-    second:
-      label: Image
-
-cloudy_card--large:
-  label: Card large
-  category: Cloudy
-  template: templates/ds/layout--ds-card--large
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Content
-    second:
-      label: Image
-
 cloudy_card:
   label: Card
   category: Cloudy
-  template: templates/ds/layout--ds-card
+  template: templates/ds/card
   class: '\Drupal\ds\Plugin\DsLayout'
   regions:
     first:
-      label: Content
-    second:
       label: Image
+    second:
+      label: Content
+
+cloudy_card_featured:
+  label: Card featured
+  category: Cloudy
+  template: templates/ds/card--featured
+  class: '\Drupal\ds\Plugin\DsLayout'
+  regions:
+    first:
+      label: Image
+    second:
+      label: Content
 
 # Homepage
 cloudy_homepage:
